1. fixed for java17
Signed-off-by: pengzhile <pengzhile@gmail.com>